# social-gaming

./: .gitignore  CMakeLists.txt  Coding Standard.md  Lobby.cpp  README.md  Sessions.cpp  Sessions.h  workflow.md
Session/: CMakeLists.txt  LobbyInfo.cpp  LobbyInfo.h  Sessions.cpp  Sessions.h  SessionsInfo.cpp  SessionsInfo.h
Session/include/: LobbyInfo.h
docs/: DependencyDiagram.mdj
gameConfig/: .GameConfig.h.swp  CMakeLists.txt  GameConfig.cpp  Rule.cpp
gameConfig/include/: GameConfig.h  Rule.h
invite/: Invitation.cpp  Invitation.h
src/: CMakeLists.txt  ServerProperties.json  main.cpp  socialapp.html
src/.code-graveyard/owner/include/: Owner.h
src/.code-graveyard/player/: Player.cpp
src/Command/: CMakeLists.txt  Command.cpp
src/Command/include/: Command.h
src/Game/: CMakeLists.txt  Game.cpp
src/Game/include/: Game.h
src/GameEngine/: CMakeLists.txt  GameEngine.cpp
src/GameEngine/include/: CMakeLists.txt  GameEngine.cpp  GameEngine.h
src/GameEngine/include/include/: GameEngine.h
src/GameGeneralConfig/: GameConfig.cpp
src/GameGeneralConfig/include/: GameConfig.h
src/GameParser/: CMakeLists.txt  GameParser.cpp  RulesParser.cpp
src/GameParser/include/: GameParser.h
src/GameServer/: CMakeLists.txt  GameServer.cpp  GameSessionManager.cpp  ServerProperties.json  socialapp.html  style.css  webchat.html
src/GameServer/include/: GameServer.h  GameSessionManager.h
src/GameServerConfiguration/: CMakeLists.txt  GameServerConfiguration.cpp
src/GameServerConfiguration/include/: GameServerConfiguration.h
src/GameSession/: CMakeLists.txt  GameSession.cpp
src/GameSession/include/: GameSession.h
src/GameSessionList/: CMakeLists.txt  GameSessionList.cpp
src/GameSessionList/include/: GameSessionList.h
src/GameSessionManager/: CMakeLists.txt  GameSessionList.cpp  GameSessionManager.cpp
src/GameSessionManager/include/: GameSessionList.h  GameSessionManager.h
src/GameSpec/: Add.cpp  BaseRule.cpp  CMakeLists.txt  Case.cpp  ControlStructRule.cpp  Deal.cpp  Discard.cpp  Extend.cpp  ForEach.cpp  Foreach.cpp  GameGeneralConfig.cpp  GameSpec.cpp  GlobalMessage.cpp  Inparallel.cpp  InputChoice.cpp  InputChoiceRule.cpp  InputText.cpp  InputVote.cpp  Loop.cpp  Message.cpp  MessageRule.cpp  Parallelfor.cpp  Reverse.cpp  Rule.cpp  Scores.cpp  Shuffle.cpp  Sort.cpp  StateValueParser.cpp  StringEvaluation.cpp  Switch.cpp  Timer.cpp  When.cpp  add.cpp  deal.cpp  discard.cpp  extend.cpp  foreach.cpp  reverse.cpp  shuffle.cpp
src/GameSpec/include/: AbstractConfig.h  AbstractSpec.h  Add.h  AddVisitor.h  BaseRule.h  Case.h  ControlStructRule.h  Deal.h  DealVisitor.h  Discard.h  DiscardVisitor.h  Extend.h  ExtendVisitor.h  ForEach.h  Foreach.h  GameGeneralConfig.h  GameSpec.h  GameSpecHelper.h  GameStateVisitor.h  GlobalMessage.h  GlobalMessageVisitor.h  Inparallel.h  InputChoice.h  InputChoiceRule.h  InputText.h  InputVote.h  Loop.h  Message.h  MessageRule.h  MessageVisitor.h  Parallelfor.h  Reverse.h  ReverseVisitor.h  Rule.h  Scores.h  Shuffle.h  ShuffleVisitor.h  Sort.h  SortVisitor.h  StateValueParser.h  (+10 more)
src/GameState/: CMakeLists.txt  GameState.cpp  StateValue.cpp  StateValueBoolean.cpp  StateValueList.cpp  StateValueMap.cpp  StateValueNumber.cpp  StateValueString.cpp
src/GameState/include/: GameState.h  GameStateVisitor.h  StateValue.h  StateValueBoolean.h  StateValueList.h  StateValueMap.h  StateValueNumber.h  StateValueString.h
src/Games/: GlobalMessageTest.json  RuleShowcase.json  Test.json  Test2.json  save.json
src/Invitation/: CMakeLists.txt  Invitation.cpp
src/Invitation/include/: Invitation.h
src/JSONGameValidator/: CMakeLists.txt  JSONValidator.cpp
src/JSONGameValidator/include/: JSONGameValidator.h
src/ProcessCommand/: CMakeLists.txt  ProcessCommand.cpp
src/ProcessCommand/include/: ProcessCommand.h
src/Rule/forEach/include/: foreach.h
src/Rule/inparallel/: inparallel.cpp
src/Rules/: rule.cpp
src/Rules/parallelfor/: parallelfor.cpp
src/User/: CMakeLists.txt  User.cpp
src/User/include/: User.h
src/UserList/: CMakeLists.txt  UserList.cpp
src/UserList/include/: UserList.h
src/UserManager/: UserManager.cpp
src/chatRoom/: CMakeLists.txt  chatRoom.cpp  chatRoom.h
src/chatRoom/include/: chatRoom.h
src/clientUI/: GameRoomUI.cpp
src/clientUI/include/: GameRoomUI.h
src/game_config/: GameConfig.cpp  Rule.cpp
src/game_config/include/: GameConfig.h  Rule.h
src/game_spec/: GameGeneralConfig.cpp  Rule.cpp
src/game_spec/include/: GameGeneralConfig.h  GameSpec.h  Rule.h
src/invitation/: CMakeLists.txt  Invitation.cpp  test.cpp
src/invitation/include/: Invitation.h
src/invite/: Invitation.cpp  Invitation.h
src/invite/include/: Invitation.h
src/owner/: CMakeLists.txt  Owner.cpp
src/owner/include/: Owner.h
src/player/: CMakeLists.txt  Player.cpp
src/player/include/: Player.h
src/rules/: rule.cpp
src/rules/forEach/: foreach.cpp
src/rules/inparallel/: inparallel.cpp
src/rules/inparallel/include/: inparallel.h
src/rules/loop/: loop.cpp
src/rules/loop/include/: loop.h
src/rules/parallelfor/: parallelfor.cpp
src/sessions/: CMakeLists.txt  GameSession.cpp  GameSessionManager.cpp  LobbyInfo.cpp  SessionsInfo.cpp  test.cpp
src/sessions/include/: GameSession.h  GameSessionManager.h  LobbyInfo.h
src/user/: CMakeLists.txt  User.cpp  User.h
src/user/include/: User.h
test/: CMakeLists.txt  GameSessionListTest.cpp  GameSessionTest.cpp  GameTest.cpp  InvitationTest.cpp
test/lib/: CMakeLists.txt
tools/: CMakeLists.txt
tools/GameServer/: CMakeLists.txt  GameServer.cpp  ServerProperties.json
user/: User.cpp  User.h
